# HackUPC_2024

./: .~lock.lista_productos.csv#  .~lock.medications.csv#  README.md  algorithm.py  dades.py  generar_listas.py  hackupc-travelperk-dataset.csv  lambda_function.py  lista_productos.csv  lista_productos_sa.csv  lista_productos_tsp.csv  main.py  medicaments.csv  medications.csv  products.csv  pyproject.toml  sa.py  test.py  tsp.py  tsp_fast.py
data/: default_order_list.csv  products.csv  products1.csv
services/: name_matcher.py  order_item_manager.py  order_list_manager.py
