[tool.poetry]
name = "hackupc-2024"
version = "0.1.0"
description = ""
authors = ["Jianing Xu <58917306+jianingxu1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fuzzywuzzy = "^0.18.0"
SpeechRecognition = "^3.10.3"
Levenshtein = "^0.25.1"
google-cloud-speech = "^2.26.0"
pyaudio = "^0.2.14"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
